--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -31,3 +31,4 @@
 \newacronym{wngt}{WNGT}{Workshop on Neural Generation and Translation}
 \newacronym{asr}{ASR}{automatic speech recognition}
 \newacronym{sgd}{SGD}{stochastic gradient descent}
+\newacronym{tpu}{TPU}{tensor processing unit}
