--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -66,7 +66,7 @@
 \usepackage{algpseudocode}
 
 \usepackage[acronym]{glossaries}
-\usepackage[automake]{glossaries-extra}
+\usepackage[shortcuts=ac,automake]{glossaries-extra}
 \preto\chapter{\glsresetall}
 
 \setabbreviationstyle[acronym]{long-short}
@@ -127,6 +127,8 @@ da-ta-set
 
 % force-ordering citations according to dummy keys
 \newcommand{\dummybiborderkey}[1]{}
+
+\newcommand{\eos}{\texttt{</s>}}
 
 \DeclareMathOperator*{\softmax}{softmax}
 \DeclareMathOperator*{\argmax}{argmax}
